Correct margin and padding in collapsed options list

--- a/packages/client/src/app/nav-bar/nav-bar.module.css
+++ b/packages/client/src/app/nav-bar/nav-bar.module.css
@@ -79,7 +79,7 @@
     display: block;
   }
 
-  .options-list > * {
+  .options-list > *, .options-list > .link {
     padding: 1rem 2rem;
     margin: 1rem 2rem;
   }
